# botbox

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: launch.json
deploy/hetzner/: .env.example  .gitignore  README.md  attach.sh  bootstrap.sh  cloud-init.yaml  connect.sh  dashboard.sh  destroy.sh  lib.sh  provision.sh  remote-bootstrap.sh  up.sh
docs/: extending-to-other-bots.md
docs/brainstorms/: 2026-06-26-botbox-ssh-client-requirements.md  2026-06-28-guild-ssh-cert-auth-requirements.md
docs/plans/: 2026-06-26-001-feat-botbox-ssh-client-plan.md  2026-06-27-001-refactor-single-panel-ui-plan.md  2026-06-28-001-feat-guild-ssh-cert-auth-plan.md
src/: bots.test.ts  bots.ts  connection.test.ts  connection.ts  index.html  key-panel.test.ts  main.ts  render-errors.test.ts  render.ts  state.test.ts  state.ts  styles.css  terminal.ts  terminals.test.ts  terminals.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs.rs  keychain.rs  lib.rs  main.rs  store.rs  store_test.rs
src-tauri/src/ssh/: channels.rs  channels_test.rs  connection.rs  connection_test.rs  forward.rs  forward_test.rs  known_hosts.rs  known_hosts_test.rs  mod.rs  pipeline.rs  pipeline_test.rs  signer.rs  signer_test.rs
src-tauri/tests/: real_bot.rs
